# Tyche-Green

./: CMakeLists.txt  README.md  disco_l475_iot1.overlay  filesys.c  main.c  prj.conf  sensors.c  sockets.c
project/: KConfig  README.md
project/ESP32CAM 1/: README.md  detect_and_send2.ino
project/ESP32CAM 2/: CameraWebServer_-_Bluetooth.ino
project/disco_l475_iot1/: CMakeList.txt  prj.conf
project/disco_l475_iot1/src/: filesys.h  main.c  wifi.c
project/nrf/: CMakeLists.txt  README.md  jpegsaver.py  main.cpp  nrf52840dk_nrf52840.overlay  prj.conf  rgbviewer.py
project/nrf/src/: tjpgd.c  tjpgd.h  tjpgdcnf.h
project/src/: backup.c  sensors.h
project/thing52/: CMakeLists (1).txt  README.md  main.c  prj (1).conf  prj.conf  thingy52_nrf52832.overlay
